# dllMode

./: CMakeLists.txt  README.md
dllMode/: CMakeLists.txt
dllMode/src/: MyDll.c  MyDll.h
